=======
CHANGES
=======

2.0.0a2 (unreleased)
--------------------

- Nothing changed yet.


2.0.0a1 (2013-03-06)
--------------------

- Added support for Python 3.3.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.


1.0.4 (2012-07-21)
------------------

- Now really get rid of ISessionDataContainer on bootstrap.

- Added Location to SessionDataManager to avoid having a LocationProxy around it


1.0.3 (2012-04-05)
------------------

- Initial release on pypi.


1.0.2 (2012-03-19)
------------------

- Nothing changed yet.


1.0.1 (2012-03-13)
------------------

- Added SessionCredentials


1.0.0 (2012-03-13)
------------------

- Initial release as a separate package.